src/components-examples/cdk/menu/cdk-menu-nested-context/cdk-menu-nested-context-example.css
.example-context-area {
  display: inline-grid;
  border: 2px dashed black;
}

.example-context-area .example-context-area {
  margin: 100px;
  width: 200px;
  height: 100px;
}

.example-menu {
  display: inline-flex;
  flex-direction: column;
  min-width: 180px;
  max-width: 280px;
  background-color: rgb(255, 255, 255);
  padding: 6px 0;
}

.example-menu-item {
  background-color: transparent;
  cursor: pointer;
  border: none;

  user-select: none;
  min-width: 64px;
  line-height: 36px;
  padding: 0 16px;

  display: flex;
  align-items: center;
  flex-direction: row;
  flex: 1;
}

.example-menu-item:hover {
  background-color: rgb(208, 208, 208);
}

.example-menu-item:active {
  background-color: rgb(170, 170, 170);
}

